--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "color": "^4.0.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
@@ -33,6 +34,7 @@
   "devDependencies": {
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
+    "@types/color": "^3.0.2",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react-refresh": "^1.3.1",
@@ -40,6 +42,7 @@
     "eslint-config-free": "^1.0.1",
     "husky": "^7.0.1",
     "lint-staged": "^11.1.2",
+    "postcss-preset-env": "^6.7.0",
     "prettier": "^2.3.2",
     "typescript": "^4.3.2",
     "vite": "^2.4.4"
